Estilo do botão reset alterado

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 		<title>Bingo Bongo!</title>
 		<!-- <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Monoton" rel="stylesheet"> -->
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/material_icons.css">
 	</head>
 	<body>
 		<header id="title">
 			Bingo Bongo!
-			<button onclick="reset();" class="btn" id="rstbtn">Jogar Novamente</button>
+			<button onclick="reset();" class="btn" id="rstbtn"><i class="material-icons">refresh</i></button>
 		</header>
 		<!-- <button onclick="newNum();" class="btn" id="caller">P&oacute;rximo N&uacute;mero</button> -->
 		<div class="container">
@@ -23,20 +24,25 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="card" id="b">
+			<div class="card">
 				<h1>B</h1>
+				<p id="b"></p>
 			</div>
-			<div class="card" id="i">
+			<div class="card">
 				<h1>I</h1>
+				<p id="i"></p>
 			</div>
-			<div class="card" id="n">
+			<div class="card">
 				<h1>N</h1>
+				<p id="n"></p>
 			</div>
-			<div class="card" id="g">
+			<div class="card">
 				<h1>G</h1>
+				<p id="g"></p>
 			</div>
-			<div class="card" id="o">
+			<div class="card">
 				<h1>O</h1>
+				<p id="o"></p>
 			</div>
 		</div>
 
