--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Bingo Bongo!</title>
+		<title>Bingo!</title>
 		<!-- <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Monoton" rel="stylesheet"> -->
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/material_icons.css">
 	</head>
 	<body>
 		<header>
-			<span id="title">Bingo Bongo!</span>
+			<span id="title">Bingo!</span>
 			<button onclick="reset();" class="btn" id="rstbtn"><i class="material-icons">refresh</i></button>
 		</header>
 		<!-- <button onclick="newNum();" class="btn" id="caller">P&oacute;rximo N&uacute;mero</button> -->
 		<div class="container">
 			<div class="card" id="lastNum" onclick="newNum()" class="btn">
 				<h2>Começar</h2>
-				<h3>Clique para um novo jogo</h3>
+				<h3>Clique aqui para um novo jogo</h3>
 			</div>
 			<div class="card card-long">
-				<h2>Já foram:</h2>
+				<h2>Números sorteados:</h2>
 				<p id="nums"></p>
 			</div>
 		</div>
-		<div class="container">
-			<div class="card">
+		<div class="container" id="setores">
+		<!-- 	<div class="card">
 				<h1>B</h1>
 				<p id="b"></p>
 			</div>
@@ -44,8 +44,8 @@
 			<div class="card">
 				<h1>O</h1>
 				<p id="o"></p>
-			</div>
-		</div>
+			</div> -->
+		</div> 
 
 		<script src="js/script.js"></script>
 	</body>
