Ampliação do tamanho dos textos para maior destaque

--- a/index.html
+++ b/index.html
@@ -16,36 +16,15 @@
 		<!-- <button onclick="newNum();" class="btn" id="caller">P&oacute;rximo N&uacute;mero</button> -->
 		<div class="container">
 			<div class="card" id="lastNum" onclick="newNum()" class="btn">
-				<h2>Começar</h2>
-				<h3>Clique aqui para um novo jogo</h3>
+				<h1>Começar</h1>
+				<h2>Clique aqui para um novo jogo</h2>
 			</div>
-			<div class="card card-long">
+			<div class="card-long">
 				<h2>Números sorteados:</h2>
 				<p id="nums"></p>
 			</div>
 		</div>
-		<div class="container" id="setores">
-		<!-- 	<div class="card">
-				<h1>B</h1>
-				<p id="b"></p>
-			</div>
-			<div class="card">
-				<h1>I</h1>
-				<p id="i"></p>
-			</div>
-			<div class="card">
-				<h1>N</h1>
-				<p id="n"></p>
-			</div>
-			<div class="card">
-				<h1>G</h1>
-				<p id="g"></p>
-			</div>
-			<div class="card">
-				<h1>O</h1>
-				<p id="o"></p>
-			</div> -->
-		</div> 
+		<div class="container" id="setores"></div> 
 
 		<script src="js/script.js"></script>
 	</body>
