--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Bingo!</title>
-		<!-- <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Monoton" rel="stylesheet"> -->
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/material_icons.css">
 	</head>
@@ -16,7 +15,7 @@
 		<!-- <button onclick="newNum();" class="btn" id="caller">P&oacute;rximo N&uacute;mero</button> -->
 		<div class="container">
 			<div class="card" id="lastNum" onclick="newNum()" class="btn">
-				<h1>Começar</h1>
+				<h1>Começard</h1>
 				<h2>Clique aqui para um novo jogo</h2>
 			</div>
 			<div class="card-long">
